# clain

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INTENT.md  README.md  SECURITY.md  pixi.toml  pyproject.toml
.claude/: settings.json
.claude/agents/: goal-advisor.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  (+1 more)
docs/: USAGE.md
examples/: capture-classify-here.txt  capture-classify-tree.txt  capture-plan-recreate-here-table.txt  capture-plan-recreate-here.txt  capture.py  classify-output.json  plan-move-output.json  plan-recreate-output.json  rules-extension.toml
plugin/: README.md
specs/: 0001-architecture.md  0002-pixi-and-cli-skeleton.md  0003-plugin-skeleton.md  0004-classification-scan.md  0005-executable-plan-model.md  0006-git-workflow.md  0007-agent-handoff.md  0008-repo-presentation.md  0009-rule-base-completeness.md  0010-single-workspace-mode.md  0011-doc-generalisation.md  0012-plan-presentation.md  0013-output-legibility.md  0014-vertical-rhythm.md  0015-global-entry-and-error-sweep.md  0016-orientation-identity-and-action-rename.md  0017-theme-tokyo-night.md  0018-release-tag-install-smoke.md  README.md
tests/: conftest.py  test_classify.py  test_cli.py  test_examples_anonymised.py  test_legend.py  test_orientation_and_rename.py  test_output_legibility.py  test_plan.py  test_plan_presentation.py  test_rule_base_completeness.py  test_rules_loader.py  test_single_workspace_mode.py  test_skills.py  test_sync_detect.py  test_theme.py  test_user_error.py  test_vertical_rhythm.py
(+31 files in other folders)
